--- a/HoneyCombSampler/index.html
+++ b/HoneyCombSampler/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5js-temp-HoneyCombSampler8535569801325869200.js"></script>
+  <script language="javascript" type="text/javascript" src="HoneyCombSampler.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
